gitops/manifests/funnaiest/funnaiest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funnaiest
  namespace: funnaiest
  labels:
    app: funnaiest
    app.kubernetes.io/name: funnaiest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: funnaiest
  template:
    metadata:
      labels:
        app: funnaiest
        app.kubernetes.io/name: funnaiest
    spec:
      containers:
      - name: nginx
        image: docker-registry.pengiuns.com/funnaiest:0.0.4
        imagePullPolicy: Always
        ports:
        - containerPort: 9090 # internal port for the app
        resources: # added by me
          requests:
            memory: "64Mi"  
            cpu: "10m"      
          limits:
            memory: "128Mi"  
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: funnaiest
  namespace: funnaiest
  labels:
    app.kubernetes.io/name: funnaiest
spec:
  selector:
    app: funnaiest
  ports:
  - name: http
    port: 80 # we talk to 80
    protocol: TCP
    targetPort: 9090 # app listens here
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: funnaiest
  labels:
    app: funnaiest
    app.kubernetes.io/name: funnaiest
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    # extra, see hiker readme
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # do not redirect HTTP to HTTPS
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # not it expects HTTP from cloudflare
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://" # telling how to redirect
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://"
    # basic auth
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "basic-auth" # this is the name of the secret
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    # Extra stuff to block (I guess not needed now with the auth), first blocks automatically
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* /(wp-admin|wp-includes|wp-content|wordpress|cms|site|sito)/ {
        return 403;
      }
    nginx.ingress.kubernetes.io/limit-connections: "1" # 1 concurrent connection per IP
    nginx.ingress.kubernetes.io/limit-rpm: "30" # max requests per minute
spec:
  ingressClassName: nginx
  rules:
  - host: funnaiest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: funnaiest
            port:
              number: 80
  tls:
  - hosts:
      - funnaiest.com
    secretName: letsencrypt-funnaiest-com
